feat: hide receivers in UI/API
